fix css bug in usage-indicator on small screens

--- a/tools/static/tools/css/tool.css
+++ b/tools/static/tools/css/tool.css
@@ -113,7 +113,8 @@
 }
 
 .usage-indicator .usage-follow{
-  flex: 0.4;
+  flex: 0.5;
+  min-width: 100px;
 }
 
 .usage-indicator .usage-followerse{
